2015-09-19  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-315

	* src/oem.*
	Modified OEM functions to accept inverses of covariance matrices,
	added log output to iterative methods, added computation of gain
	matrix and returning of fitted measurement vector.

	* src/test_oem.*
	Adapted oem function calls to changed function interfaces.

	*src/m_oem.cc
	Adapted oem function calls to updated function interfaces.
2015-09-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-314

	* controlfiles/instruments/amsu/amsub_metmm.arts:

	Fix testcase TestAMSUB_MetMM by adding met_mm_accuracy and setting it
	to high (2). This folder should be removed once the TestMetMM cases are
	settled.

2015-09-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-313

	* src/m_agenda.cc (AgendaExecute):

	Don't scope WSVs that are input _and_ output.

2015-09-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-312

	* src/m_oem.cc (oem): inversion_iterate_agenda_old used by ml and
	gn, while li uses inversion_iterate_agenda.

	* src/agendas.cc: Introduced inversion_iterate_agenda_old as a
	temporary solution. Changed set of input arguments to
	inversion_iterate_agenda.

2015-09-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-311

	* src/m_agenda.cc (AgendaExecute):

	Fix bug in scoping for WSVs that are defined as input of the agenda but
	changed by WSMs inside it. Their new values wrongly leaked into the
	caller's scope. Reported by Patrick.

	* controlfiles/artscomponents/agendas/TestAgendaExecute.arts:

	Add check for above case.

2015-09-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-310

	* src/m_oem.cc (oem): Some changes around the gin arguments. Most
	importantly, introduced yf_linear to trigger that the actual yf is
	calculated.

2015-09-15 Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-309

	* src/m_oem.cc Added wrapper class for agenda execution and
	calls to OEM methods.
