@@ -1,3 +1,11 @@
+2015-09-21  Richard Larsson <ric.larsson@gmail.com>
+
+	* arts-2-3-316
+	
+	* m_atmosphere.cc,methods.cc (atm_fields_compactCreateFromField):
+	Added by request of Maryam to be able to create compact fields from
+	nothing.  (Was problematic to do this before, this is just a helper.)
+
 2015-09-19  Simon Pfreundschuh <simonpf@chalmers.se>
 
 	* arts-2-3-315
